; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_transform_height.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_transform_height.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @transform_height to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @transform_height(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @bit_size(i32 %8, i32 %9, i32 %10)
  switch i32 %11, label %17 [
    i32 1, label %12
    i32 2, label %12
    i32 4, label %12
    i32 8, label %13
    i32 16, label %14
    i32 24, label %15
    i32 32, label %15
    i32 48, label %16
    i32 64, label %16
  ]

12:                                               ; preds = %3, %3, %3
  store i32 1, i32* %4, align 4
  br label %18

13:                                               ; preds = %3
  store i32 2, i32* %4, align 4
  br label %18

14:                                               ; preds = %3
  store i32 512, i32* %4, align 4
  br label %18

15:                                               ; preds = %3, %3
  store i32 512, i32* %4, align 4
  br label %18

16:                                               ; preds = %3, %3
  store i32 2048, i32* %4, align 4
  br label %18

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %18

18:                                               ; preds = %17, %16, %15, %14, %13, %12
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @bit_size(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
